# ai-agent-playground

./: .gitignore  LICENSE  README.md  autogen_demo.py  ceo_demo.py  medusa_demo.py  requirements.txt
autogen_demo/: autogen_demo.py
bhakti_demo/: bhakti.yaml  client.py  run_server.py
ceo_demo/: multi_agent.py  single_agent.py
crewai_demo/: README.md  pyproject.toml  report.md  run_crewai.py
crewai_demo/knowledge/: user_preference.txt
crewai_demo/src/crewai_demo/: crew.py  main.py
crewai_demo/src/crewai_demo/tools/: custom_tool.py
medusa_demo/: medusa_demo.py
